@@ -16,13 +16,12 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication.external.basic;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.Group;
 import org.apache.jackrabbit.api.security.user.User;
 import org.apache.jackrabbit.api.security.user.UserManager;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.AbstractExternalAuthTest;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalGroup;
 import org.apache.jackrabbit.oak.spi.security.authentication.external.ExternalIdentity;
@@ -905,7 +904,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
             for (ExternalIdentityRef inheritedGrRef : extGr.getDeclaredGroups()) {
                 Group g = userManager.getAuthorizable(inheritedGrRef.getId(), Group.class);
                 assertNotNull(g);
-                if (Iterables.contains(externalUser.getDeclaredGroups(), inheritedGrRef)) {
+                if (IterableUtils.contains(externalUser.getDeclaredGroups(), inheritedGrRef)) {
                     assertTrue(g.isDeclaredMember(a));
                 } else {
                     assertFalse(g.isDeclaredMember(a));
@@ -1451,7 +1450,7 @@ public class DefaultSyncContextTest extends AbstractExternalAuthTest {
 
     @Test
     public void testCreateValuesEmptyCollection() throws Exception {
-        Value[] vs = syncCtx.createValues(ImmutableList.of());
+        Value[] vs = syncCtx.createValues(List.of());
         assertNotNull(vs);
         assertEquals(0, vs.length);
     }
