@@ -16,8 +16,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication.external.impl.principal;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Iterators;
 import org.apache.jackrabbit.api.security.user.Group;
 import org.apache.jackrabbit.api.security.user.User;
 import org.apache.jackrabbit.api.security.user.UserManager;
@@ -27,7 +25,8 @@ import org.apache.jackrabbit.oak.api.Root;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.PathUtils;
-import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
+import org.apache.jackrabbit.oak.commons.collections.IteratorUtils;
+import org.apache.jackrabbit.oak.commons.collections.ListUtils;
 import org.apache.jackrabbit.oak.plugins.memory.PropertyStates;
 import org.apache.jackrabbit.oak.plugins.tree.TreeUtil;
 import org.apache.jackrabbit.oak.spi.commit.CommitInfo;
@@ -141,7 +140,7 @@ public class DynamicGroupValidatorTest extends AbstractPrincipalTest {
         assertFalse(groupTree.hasProperty(REP_MEMBERS));
         
         String uuid = r.getTree(userManager.getAuthorizable(USER_ID).getPath()).getProperty(JCR_UUID).getValue(Type.STRING);
-        groupTree.setProperty(REP_MEMBERS, ImmutableList.of(uuid), Type.WEAKREFERENCES);
+        groupTree.setProperty(REP_MEMBERS, List.of(uuid), Type.WEAKREFERENCES);
         try {
             r.commit();
             fail("CommitFailedException 77 expected.");
@@ -269,12 +268,12 @@ public class DynamicGroupValidatorTest extends AbstractPrincipalTest {
 
         Tree groupTree = r.getTree(localGroup.getPath());
         Tree userTree = r.getTree(userManager.getAuthorizable(USER_ID).getPath());
-        List<String> members = CollectionUtils.toList(groupTree.getProperty(REP_MEMBERS).getValue(Type.STRINGS));
+        List<String> members = ListUtils.toList(groupTree.getProperty(REP_MEMBERS).getValue(Type.STRINGS));
         members.add(userTree.getProperty(JCR_UUID).getValue(Type.STRING));
         groupTree.setProperty(REP_MEMBERS, members, Type.WEAKREFERENCES);
         r.commit();
 
-        assertEquals(2, Iterators.size(localGroup.getMembers()));
+        assertEquals(2, IteratorUtils.size(localGroup.getMembers()));
     }
 
 
@@ -301,12 +300,12 @@ public class DynamicGroupValidatorTest extends AbstractPrincipalTest {
         r.commit();
         
         Tree groupTree = r.getTree(localGroup.getPath());
-        List<String> members = CollectionUtils.toList(groupTree.getProperty(REP_MEMBERS).getValue(Type.STRINGS));
+        List<String> members = ListUtils.toList(groupTree.getProperty(REP_MEMBERS).getValue(Type.STRINGS));
         members.remove(1);
         groupTree.setProperty(REP_MEMBERS, members, Type.WEAKREFERENCES);
         r.commit();
 
-        assertEquals(1, Iterators.size(localGroup.getMembers()));
+        assertEquals(1, IteratorUtils.size(localGroup.getMembers()));
     }
 
     @Test
@@ -319,7 +318,7 @@ public class DynamicGroupValidatorTest extends AbstractPrincipalTest {
 
         Tree groupTree = r.getTree(localGroup.getPath());
         Tree userTree = r.getTree(userManager.getAuthorizable(USER_ID).getPath());
-        List<String> members = CollectionUtils.toList(groupTree.getProperty(REP_MEMBERS).getValue(Type.STRINGS));
+        List<String> members = ListUtils.toList(groupTree.getProperty(REP_MEMBERS).getValue(Type.STRINGS));
         members.add(userTree.getProperty(JCR_UUID).getValue(Type.STRING));
         groupTree.setProperty(REP_MEMBERS, members, Type.WEAKREFERENCES);
         try {
