@@ -30,10 +30,7 @@ import javax.jcr.security.AccessControlPolicyIterator;
 import javax.jcr.security.NamedAccessControlPolicy;
 import javax.jcr.security.Privilege;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.JcrConstants;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlPolicy;
 import org.apache.jackrabbit.oak.api.ContentSession;
@@ -42,7 +39,7 @@ import org.apache.jackrabbit.oak.api.Root;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.PathUtils;
-import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.namepath.NamePathMapper;
 import org.apache.jackrabbit.oak.spi.nodetype.NodeTypeConstants;
 import org.apache.jackrabbit.oak.plugins.nodetype.ReadOnlyNodeTypeManager;
@@ -74,7 +71,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
     public void before() throws Exception {
         super.before();
 
-        cugAccessControlManager = new CugAccessControlManager(root, NamePathMapper.DEFAULT, getSecurityProvider(), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
+        cugAccessControlManager = new CugAccessControlManager(root, NamePathMapper.DEFAULT, getSecurityProvider(), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
     }
 
     private CugPolicy createCug(@NotNull String path) {
@@ -171,7 +168,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         CugPolicy cugPolicy = (CugPolicy) policies[0];
         assertTrue(cugPolicy.getPrincipals().isEmpty());
 
-        cug.setProperty(REP_PRINCIPAL_NAMES, ImmutableList.of("unknownPrincipalName", EveryonePrincipal.NAME), Type.STRINGS);
+        cug.setProperty(REP_PRINCIPAL_NAMES, List.of("unknownPrincipalName", EveryonePrincipal.NAME), Type.STRINGS);
 
         policies = cugAccessControlManager.getPolicies(SUPPORTED_PATH);
         cugPolicy = (CugPolicy) policies[0];
@@ -238,7 +235,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         ConfigurationParameters config = ConfigurationParameters.of(AuthorizationConfiguration.NAME, ConfigurationParameters.of(
                     CugConstants.PARAM_CUG_SUPPORTED_PATHS, SUPPORTED_PATHS,
                     CugConstants.PARAM_CUG_ENABLED, false));
-        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
+        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
         AccessControlPolicy[] policies = acMgr.getEffectivePolicies(SUPPORTED_PATH);
         assertEquals(0, policies.length);
 
@@ -254,7 +251,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         // test-user only has read-access on /content (no read-ac permission)
         try (ContentSession cs = createTestSession()) {
             Root r = cs.getLatestRoot();
-            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
+            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
             AccessControlPolicy[] effective = m.getEffectivePolicies("/content");
             assertEquals(0, effective.length);
         }
@@ -266,7 +263,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         // test-user only has read-access on /content (no read-ac permission)
         try (ContentSession cs = createTestSession()) {
             Root r = cs.getLatestRoot();
-            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
+            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
             m.getEffectivePolicies("/content2");
         }
     }
@@ -278,7 +275,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         // test-user2 only has read-ac permission on /content but not on /content2
         try (ContentSession cs = createTestSession2()) {
             Root r = cs.getLatestRoot();
-            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
+            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
             AccessControlPolicy[] effective = m.getEffectivePolicies("/content/a/b/c");
             // [/content/a, /content/a/b/c]
             assertEquals(2, effective.length);
@@ -324,7 +321,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
 
     @Test
     public void testSetInvalidPolicy() throws Exception {
-        List<AccessControlPolicy> invalidPolicies = ImmutableList.of(
+        List<AccessControlPolicy> invalidPolicies = List.of(
                 new AccessControlPolicy() {},
                 (NamedAccessControlPolicy) () -> "name",
                 InvalidCug.INSTANCE
@@ -442,7 +439,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         root.commit();
 
         Tree tree = root.getTree(SUPPORTED_PATH);
-        Set<String> mixins = CollectionUtils.toSet(TreeUtil.getNames(tree, NodeTypeConstants.JCR_MIXINTYPES));
+        Set<String> mixins = SetUtils.toSet(TreeUtil.getNames(tree, NodeTypeConstants.JCR_MIXINTYPES));
         mixins.remove(MIX_REP_CUG_MIXIN);
         tree.setProperty(JcrConstants.JCR_MIXINTYPES, mixins, NAMES);
 
@@ -454,7 +451,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
 
     @Test
     public void testRemoveInvalidPolicy() throws Exception {
-        List<AccessControlPolicy> invalidPolicies = ImmutableList.of(
+        List<AccessControlPolicy> invalidPolicies = List.of(
                 new AccessControlPolicy() {},
                 (NamedAccessControlPolicy) () -> "name",
                 InvalidCug.INSTANCE
@@ -586,7 +583,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         AccessControlPolicy[] testgroupEffective = cugAccessControlManager.getEffectivePolicies(Set.of(getTestGroupPrincipal()));
         assertEquals(2, testgroupEffective.length);
 
-        assertTrue(Sets.intersection(ImmutableSet.copyOf(everyoneEffective), ImmutableSet.copyOf(testgroupEffective)).isEmpty());
+        assertTrue(SetUtils.intersection(Set.of(everyoneEffective), Set.of(testgroupEffective)).isEmpty());
     }
 
     @Test
@@ -596,7 +593,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         try (ContentSession cs = createTestSession()) {
             Root r = cs.getLatestRoot();
             CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(),
-                    ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
+                    Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
             AccessControlPolicy[] effective = m.getEffectivePolicies(Set.of(getTestGroupPrincipal(), EveryonePrincipal.getInstance()));
             assertEquals(0, effective.length);
         }
@@ -610,7 +607,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         try (ContentSession cs = createTestSession2()) {
             Root r = cs.getLatestRoot();
             CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(),
-                    ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
+                    Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
             AccessControlPolicy[] effective = m.getEffectivePolicies(Set.of(getTestGroupPrincipal(), EveryonePrincipal.getInstance()));
             // [/content/a, /content/a/b/c, /content/aa/bb] but not: /content2
             assertEquals(3, effective.length);
@@ -643,7 +640,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         ConfigurationParameters config = ConfigurationParameters.of(AuthorizationConfiguration.NAME, ConfigurationParameters.of(
                 CugConstants.PARAM_CUG_SUPPORTED_PATHS, SUPPORTED_PATHS,
                 CugConstants.PARAM_CUG_ENABLED, false));
-        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
+        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
         assertEquals(0, acMgr.getEffectivePolicies(Set.of(getTestGroupPrincipal(), EveryonePrincipal.getInstance())).length);
     }
     
@@ -677,7 +674,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         ConfigurationParameters config = ConfigurationParameters.of(AuthorizationConfiguration.NAME, ConfigurationParameters.of(
                 CugConstants.PARAM_CUG_SUPPORTED_PATHS, SUPPORTED_PATHS,
                 CugConstants.PARAM_CUG_ENABLED, false));
-        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
+        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
 
         Iterator<AccessControlPolicy> effective = acMgr.getEffectivePolicies(principalSet, "/content/a");
         assertFalse(effective.hasNext());
@@ -730,7 +727,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         // test-user only has read-access on /content (no read-ac permission)
         try (ContentSession cs = createTestSession()) {
             Root r = cs.getLatestRoot();
-            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
+            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
             Iterator<AccessControlPolicy> effective = m.getEffectivePolicies(Set.of(getTestGroupPrincipal()), "/content/a");
             assertFalse(effective.hasNext());
         }
