@@ -25,13 +25,12 @@ import javax.jcr.AccessDeniedException;
 import javax.jcr.GuestCredentials;
 import javax.jcr.Session;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.oak.api.ContentSession;
 import org.apache.jackrabbit.oak.api.Root;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
 import org.apache.jackrabbit.oak.plugins.memory.PropertyStates;
 import org.apache.jackrabbit.oak.plugins.tree.ReadOnly;
 import org.apache.jackrabbit.oak.plugins.tree.TreeType;
@@ -88,11 +87,11 @@ public class CugPermissionProviderTest extends AbstractCugTest implements NodeTy
         PATH_INCUG_MAP.put(INVALID_PATH, false);
     }
 
-    private static final List<String> READABLE_PATHS = ImmutableList.of(
+    private static final List<String> READABLE_PATHS = List.of(
             "/content/a/b/c", "/content/a/b/c/jcr:primaryType",
             "/content/a/b/c/nonExisting", "/content/a/b/c/nonExisting/jcr:primaryType");
 
-    private static final List<String> NOT_READABLE_PATHS = ImmutableList.of(
+    private static final List<String> NOT_READABLE_PATHS = List.of(
             "/", "/jcr:primaryType",
             UNSUPPORTED_PATH, UNSUPPORTED_PATH + "/jcr:primaryType",
             "/content", "/content/jcr:primaryType",
@@ -520,7 +519,7 @@ public class CugPermissionProviderTest extends AbstractCugTest implements NodeTy
      */
     @Test
     public void testHasNonReadPrivileges() {
-        for (String p : Iterables.concat(READABLE_PATHS, NOT_READABLE_PATHS)) {
+        for (String p : IterableUtils.chainedIterable(READABLE_PATHS, NOT_READABLE_PATHS)) {
             Tree tree = root.getTree(p);
             if (tree.exists()) {
                 assertFalse(cugPermProvider.hasPrivileges(tree, PrivilegeConstants.JCR_WRITE));
@@ -647,7 +646,7 @@ public class CugPermissionProviderTest extends AbstractCugTest implements NodeTy
      */
     @Test
     public void testIsGrantedNonRead() {
-        for (String p : Iterables.concat(READABLE_PATHS, NOT_READABLE_PATHS)) {
+        for (String p : IterableUtils.chainedIterable(READABLE_PATHS, NOT_READABLE_PATHS)) {
             Tree tree = root.getTree(p);
             if (tree.exists()) {
                 assertFalse(cugPermProvider.isGranted(tree, null, Permissions.ALL));
