@@ -16,12 +16,10 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authorization.principalbased.impl;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Maps;
 import org.apache.jackrabbit.api.security.user.User;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
 import org.apache.jackrabbit.oak.plugins.tree.TreeUtil;
 import org.apache.jackrabbit.oak.spi.security.ConfigurationParameters;
 import org.apache.jackrabbit.oak.spi.security.authorization.AuthorizationConfiguration;
@@ -53,8 +51,10 @@ import javax.jcr.security.AccessControlException;
 import javax.jcr.security.AccessControlPolicy;
 import java.security.Principal;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static org.apache.jackrabbit.oak.spi.security.authorization.accesscontrol.AccessControlConstants.REP_GLOB;
 import static org.apache.jackrabbit.oak.spi.security.authorization.accesscontrol.AccessControlConstants.REP_ITEM_NAMES;
@@ -138,20 +138,20 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
     }
 
     private List<PropInfo> mockPropInfos(@NotNull Map<String, String> restrictions, int propertyType) throws RepositoryException {
-        return mockPropInfos(Maps.transformValues(restrictions, string -> {
+        return mockPropInfos(restrictions.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, e -> {
             try {
-                return new Value[] {getValueFactory(root).createValue(string, propertyType)};
-            } catch (ValueFormatException e) {
-                throw new RuntimeException(e);
+                return new Value[] {getValueFactory(root).createValue(e.getValue(), propertyType)};
+            } catch (ValueFormatException ex) {
+                throw new RuntimeException(ex);
             }
-        }));
+        })));
     }
 
     private List<PropInfo> mockPropInfos(@NotNull Map<String, Value[]> restrictions) throws RepositoryException {
-        List<PropInfo> propInfos = new ArrayList();
+        List<PropInfo> propInfos = new ArrayList<>();
         for (Map.Entry<String,Value[]> r : restrictions.entrySet()) {
             String jcrName = r.getKey();
-            List<Value> vs = ImmutableList.copyOf(r.getValue());
+            List<Value> vs = Arrays.asList(r.getValue());
             PropInfo propInfo = mockPropInfo(jcrName);
             if (!vs.isEmpty()) {
                 TextValue first = when(mock(TextValue.class).getString()).thenReturn(vs.get(0).getString()).getMock();
@@ -474,7 +474,7 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
         policyTree = root.getTree(policyTree.getPath());
         assertTrue(policyTree.exists());
         assertTrue(policyTree.hasProperty(REP_PRINCIPAL_NAME));
-        assertTrue(Iterables.isEmpty(policyTree.getChildren()));
+        assertTrue(IterableUtils.isEmpty(policyTree.getChildren()));
     }
 
     @Test(expected = IllegalStateException.class)
@@ -574,7 +574,7 @@ public class PrincipalPolicyImporterTest extends AbstractPrincipalBasedTest {
         // rep:privileges with wrong type
         PropInfo propInfo = mockPropInfo(getJcrName(REP_PRIVILEGES));
         TextValue tx = when(mock(TextValue.class).getString()).thenReturn(getJcrName(JCR_READ)).getMock();
-        List values = ImmutableList.of(tx);
+        List values = List.of(tx);
         when(propInfo.getTextValues()).thenReturn(values);
         when(propInfo.getType()).thenReturn(PropertyType.STRING);
         propInfos.add(propInfo);
