@@ -16,11 +16,10 @@
  */
 package org.apache.jackrabbit.oak.security.user.action;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.api.security.user.Group;
 import org.apache.jackrabbit.api.security.user.User;
 import org.apache.jackrabbit.oak.AbstractSecurityTest;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
 import org.apache.jackrabbit.oak.spi.security.ConfigurationParameters;
 import org.apache.jackrabbit.oak.spi.security.user.UserConfiguration;
 import org.apache.jackrabbit.oak.spi.security.user.UserConstants;
@@ -33,6 +32,7 @@ import org.junit.Before;
 import org.junit.Test;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
 import static org.mockito.Mockito.mock;
@@ -45,7 +45,7 @@ public class GroupActionTest extends AbstractSecurityTest {
     private static final String TEST_USER_PREFIX = "testUser";
 
     final GroupAction groupAction = mock(GroupAction.class);
-    private final AuthorizableActionProvider actionProvider = securityProvider -> ImmutableList.of(groupAction);
+    private final AuthorizableActionProvider actionProvider = securityProvider -> List.of(groupAction);
 
     private User testUser01;
     private User testUser02;
@@ -120,9 +120,9 @@ public class GroupActionTest extends AbstractSecurityTest {
 
         Set<String> memberIds = Set.of(testUser01.getID());
         Set<String> failedIds = Set.of(testUser02.getID(), testGroup.getID());
-        Iterable<String> ids = Iterables.concat(memberIds, failedIds);
+        Iterable<String> ids = IterableUtils.chainedIterable(memberIds, failedIds);
 
-        testGroup.addMembers(Iterables.toArray(ids, String.class));
+        testGroup.addMembers(IterableUtils.toArray(ids, String.class));
 
         verify(groupAction, times(1)).onMembersAdded(testGroup, memberIds, failedIds, root, getNamePathMapper());
     }
@@ -143,9 +143,9 @@ public class GroupActionTest extends AbstractSecurityTest {
 
         Set<String> memberIds = Set.of(testUser01.getID());
         Set<String> failedIds = Set.of(testUser02.getID(), testGroup.getID());
-        Iterable<String> ids = Iterables.concat(memberIds, failedIds);
+        Iterable<String> ids = IterableUtils.chainedIterable(memberIds, failedIds);
 
-        testGroup.removeMembers(Iterables.toArray(ids, String.class));
+        testGroup.removeMembers(IterableUtils.toArray(ids, String.class));
         verify(groupAction, times(1)).onMembersRemoved(testGroup, memberIds, failedIds, root, getNamePathMapper());
     }
 
