@@ -18,10 +18,11 @@ package org.apache.jackrabbit.oak.security.user.query;
 
 import java.util.Collections;
 import java.util.Iterator;
+import java.util.List;
 import java.util.NoSuchElementException;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
+import org.apache.jackrabbit.oak.commons.collections.IteratorUtils;
 import org.junit.Test;
 
 import static org.junit.Assert.assertEquals;
@@ -37,7 +38,7 @@ public class ResultIteratorTest {
 
     @Test
     public void testCreateWithoutLimitation() {
-        Iterator<String> it = ImmutableList.of("str").iterator();
+        Iterator<String> it = List.of("str").iterator();
         assertSame(it, ResultIterator.create(ResultIterator.OFFSET_NONE, ResultIterator.MAX_ALL, it));
     }
 
@@ -58,23 +59,23 @@ public class ResultIteratorTest {
 
     @Test
     public void testCreateOffsetLtSize() {
-        assertEquals(1, Iterators.size(ResultIterator.create(1, ResultIterator.MAX_ALL,  ImmutableList.of("str", "str").iterator())));
+        assertEquals(1, IteratorUtils.size(ResultIterator.create(1, ResultIterator.MAX_ALL, List.of("str", "str").iterator())));
     }
 
     @Test
     public void testCreateOffsetEqualsMax() {
-        assertEquals(1, Iterators.size(ResultIterator.create(1, 1,  ImmutableList.of("str", "str").iterator())));
+        assertEquals(1, IteratorUtils.size(ResultIterator.create(1, 1, List.of("str", "str").iterator())));
     }
 
     @Test
     public void testCreateOffsetGtMax() {
-        assertEquals(1, Iterators.size(ResultIterator.create(2, 1,  ImmutableList.of("str", "str", "str").iterator())));
+        assertEquals(1, IteratorUtils.size(ResultIterator.create(2, 1, List.of("str", "str", "str").iterator())));
     }
 
     @Test
     public void testCreateOffsetLtMax() {
-        Iterator resultIt = ResultIterator.create(1, 3,  ImmutableList.of("str", "str", "str", "str").iterator());
-        assertEquals(3, Iterators.size(resultIt));
+        Iterator resultIt = ResultIterator.create(1, 3, List.of("str", "str", "str", "str").iterator());
+        assertEquals(3, IteratorUtils.size(resultIt));
     }
 
     @Test(expected = NoSuchElementException.class)
@@ -85,7 +86,7 @@ public class ResultIteratorTest {
 
     @Test
     public void testNextWithOffset() {
-        Iterator<String> it = ResultIterator.create(1, ResultIterator.MAX_ALL, ImmutableList.of("str", "str2").iterator());
+        Iterator<String> it = ResultIterator.create(1, ResultIterator.MAX_ALL, List.of("str", "str2").iterator());
         assertEquals("str2", it.next());
     }
 
