@@ -24,8 +24,6 @@ import java.util.List;
 import org.apache.jackrabbit.oak.spi.state.NodeState;
 import org.jetbrains.annotations.NotNull;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-
 /**
  * This {@code QueryIndexProvider} aggregates a list of query index providers
  * into a single query index provider.
@@ -49,14 +47,14 @@ public class CompositeQueryIndexProvider implements QueryIndexProvider {
             return new QueryIndexProvider() {
                 @Override
                 public List<QueryIndex> getQueryIndexes(NodeState nodeState) {
-                    return ImmutableList.of();
+                    return List.of();
                 }
             };
         } else if (providers.size() == 1) {
             return providers.iterator().next();
         } else {
             return new CompositeQueryIndexProvider(
-                    ImmutableList.copyOf(providers));
+                    List.copyOf(providers));
         }
     }
 
