@@ -18,12 +18,11 @@
  */
 package org.apache.jackrabbit.oak.index;
 
-import org.apache.jackrabbit.guava.common.collect.Iterators;
-import org.apache.jackrabbit.guava.common.io.Files;
 import org.apache.commons.io.output.ByteArrayOutputStream;
 import org.apache.jackrabbit.oak.api.PropertyState;
 import org.apache.jackrabbit.oak.api.Type;
-import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
+import org.apache.jackrabbit.oak.commons.collections.IteratorUtils;
+import org.apache.jackrabbit.oak.commons.collections.ListUtils;
 import org.apache.jackrabbit.oak.json.JsopDiff;
 import org.apache.jackrabbit.oak.plugins.index.IndexConstants;
 import org.apache.jackrabbit.oak.plugins.index.IndexPathService;
@@ -51,7 +50,7 @@ import javax.jcr.query.RowIterator;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
@@ -339,7 +338,7 @@ public class ReindexIT extends LuceneAbstractIndexCommandTest {
                 "}";
 
         File jsonFile = temporaryFolder.newFile();
-        Files.write(json, jsonFile, StandardCharsets.UTF_8);
+        Files.writeString(jsonFile.toPath(), json);
 
         File outDir = temporaryFolder.newFolder();
         File storeDir = fixture.getDir();
@@ -361,7 +360,7 @@ public class ReindexIT extends LuceneAbstractIndexCommandTest {
         assertThat(explain, containsString("/oak:index/barIndex"));
 
         IndexPathService idxPathService = new IndexPathServiceImpl(fixture2.getNodeStore());
-        List<String> indexPaths = CollectionUtils.toList(idxPathService.getIndexPaths());
+        List<String> indexPaths = ListUtils.toList(idxPathService.getIndexPaths());
 
         assertThat(indexPaths, hasItem("/oak:index/nodetype"));
         assertThat(indexPaths, hasItem("/oak:index/barIndex"));
@@ -388,7 +387,7 @@ public class ReindexIT extends LuceneAbstractIndexCommandTest {
 
         Query q = qm.createQuery("select * from [nt:base] where [foo] is not null", Query.JCR_SQL2);
         QueryResult result = q.execute();
-        int size = Iterators.size(result.getNodes());
+        int size = IteratorUtils.size(result.getNodes());
         session.logout();
         return size;
     }
