@@ -40,14 +40,9 @@ import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import ch.qos.logback.classic.Level;
-import org.apache.jackrabbit.guava.common.base.Joiner;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.jackrabbit.guava.common.base.Splitter;
-import org.apache.jackrabbit.guava.common.base.Strings;
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
-import org.apache.jackrabbit.guava.common.collect.Lists;
-import org.apache.jackrabbit.guava.common.collect.Maps;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 import joptsimple.OptionException;
 import org.apache.commons.io.FileUtils;
 import org.apache.felix.cm.file.ConfigurationHandler;
@@ -60,7 +55,7 @@ import org.apache.jackrabbit.oak.blob.cloud.azure.blobstorage.AzureDataStoreUtil
 import org.apache.jackrabbit.oak.blob.cloud.s3.S3Constants;
 import org.apache.jackrabbit.oak.blob.cloud.s3.S3DataStoreUtils;
 import org.apache.jackrabbit.oak.commons.FileIOUtils;
-import org.apache.jackrabbit.oak.commons.collections.CollectionUtils;
+import org.apache.jackrabbit.oak.commons.collections.SetUtils;
 import org.apache.jackrabbit.oak.commons.junit.LogCustomizer;
 import org.apache.jackrabbit.oak.plugins.blob.MemoryBlobStoreNodeStore;
 import org.apache.jackrabbit.oak.plugins.blob.MarkSweepGarbageCollector;
@@ -76,8 +71,7 @@ import org.apache.jackrabbit.oak.plugins.index.lucene.directory.OakDirectory;
 import org.apache.jackrabbit.oak.run.cli.BlobStoreOptions.Type;
 import org.apache.jackrabbit.oak.segment.SegmentNodeStore;
 import org.apache.jackrabbit.oak.segment.SegmentNodeStoreBuilders;
-import org.apache.jackrabbit.oak.segment.azure.AzureStorageCredentialManager;
-import org.apache.jackrabbit.oak.segment.azure.AzureUtilities;
+import org.apache.jackrabbit.oak.segment.azure.AzurePersistenceManager;
 import org.apache.jackrabbit.oak.segment.azure.tool.ToolUtils;
 import org.apache.jackrabbit.oak.segment.compaction.SegmentGCOptions;
 import org.apache.jackrabbit.oak.segment.file.FileStore;
@@ -151,7 +145,7 @@ public class DataStoreCommandTest {
     public void setup() throws Exception {
         if (storeFixture instanceof StoreFixture.AzureSegmentStoreFixture) {
             assumeFalse("Environment variable \"AZURE_SECRET_KEY\" must be set to run Azure Segment fixture",
-                    Strings.isNullOrEmpty(System.getenv("AZURE_SECRET_KEY")));
+                    StringUtils.isEmpty(System.getenv("AZURE_SECRET_KEY")));
         }
 
         setupDataStore = blobFixture.init(temporaryFolder);
@@ -259,7 +253,7 @@ public class DataStoreCommandTest {
         }
 
         for (String id : data.missingDataStore) {
-            long count = blobStore.countDeleteChunks(ImmutableList.of(id), 0);
+            long count = blobStore.countDeleteChunks(List.of(id), 0);
             assertEquals(1, count);
         }
 
@@ -297,7 +291,7 @@ public class DataStoreCommandTest {
         List<String> argsList = new ArrayList<>(Arrays.asList("--check-consistency", "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(), "--out-dir",
                 dump.getAbsolutePath(), storeFixture.getConnectionString(), "--reset-log-config", "false", "--work-dir",
                 temporaryFolder.newFolder().getAbsolutePath()));
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.add(additionalParams);
         }
 
@@ -328,7 +322,7 @@ public class DataStoreCommandTest {
         List<String> argsList = new ArrayList<>(Arrays.asList("--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(), "--out-dir",
                 dump.getAbsolutePath(), storeFixture.getConnectionString(), "--reset-log-config", "false", "--work-dir",
                 temporaryFolder.newFolder().getAbsolutePath()));
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.add(additionalParams);
         }
 
@@ -349,7 +343,7 @@ public class DataStoreCommandTest {
         List<String> argsList = new ArrayList<>(Arrays.asList(storeFixture.getConnectionString(),
                 "--out-dir", dump.getAbsolutePath(), "--reset-log-config", "false", "--work-dir",
                 temporaryFolder.newFolder().getAbsolutePath(), "--check-consistency"));
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.add(additionalParams);
         }
 
@@ -571,7 +565,7 @@ public class DataStoreCommandTest {
         additionalParams += " --check-consistency-gc true";
         testGc(dump, data, 0, false, false);
 
-        assertFileEquals(dump, "avail-", Sets.difference(data.added, data.missingDataStore));
+        assertFileEquals(dump, "avail-", SetUtils.difference(data.added, data.missingDataStore));
 
         // Verbose would have paths as well as ids changed but normally only DocumentNS would have paths suffixed
         assertFileEquals(dump, "consistencyCandidatesAfterGC", data.missingDataStore);
@@ -684,7 +678,7 @@ public class DataStoreCommandTest {
         List<String> argsList = new ArrayList<>(Arrays.asList("--collect-garbage", "--max-age", String.valueOf(0), "--" + getOption(blobFixture.getType()),
                 blobFixture.getConfigPath(), storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(),
                 "--reset-log-config", "false", "--work-dir", temporaryFolder.newFolder().getAbsolutePath()));
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.add(additionalParams);
         }
 
@@ -708,14 +702,14 @@ public class DataStoreCommandTest {
         List<String> argsList = new ArrayList<>(Arrays.asList("--check-consistency", "--fake-ds-path", dsPath.getAbsolutePath(),
                 storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(), "--work-dir",
                 temporaryFolder.newFolder().getAbsolutePath()));
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.add(additionalParams);
         }
         DataStoreCommand cmd = new DataStoreCommand();
 
         cmd.execute(argsList.toArray(new String[0]));
         assertFileEquals(dump, "avail-", new HashSet<>());
-        assertFileEquals(dump, "marked-", Sets.difference(data.added, data.deleted));
+        assertFileEquals(dump, "marked-", SetUtils.difference(data.added, data.deleted));
     }
 
 
@@ -727,7 +721,7 @@ public class DataStoreCommandTest {
         List<String> argsList = new ArrayList<>(Arrays.asList("--check-consistency", String.valueOf(markOnly), "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
                 storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(), "--work-dir",
                 temporaryFolder.newFolder().getAbsolutePath()));
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.addAll(Splitter.on(" ").splitToList(additionalParams));
         }
 
@@ -738,23 +732,23 @@ public class DataStoreCommandTest {
         cmd.execute(argsList.toArray(new String[0]));
         
         if (!markOnly) {
-            assertFileEquals(dump, "avail-", Sets.difference(data.added, data.missingDataStore));
+            assertFileEquals(dump, "avail-", SetUtils.difference(data.added, data.missingDataStore));
         } else {
             assertFileNull(dump, "avail-");
         }
 
         // Verbose would have paths as well as ids changed but normally only DocumentNS would have paths suffixed
         assertFileEquals(dump, "marked-", verbose ?
-                encodedIdsAndPath(Sets.difference(verboseRootPath ? data.addedSubset :
+                encodedIdsAndPath(SetUtils.difference(verboseRootPath ? data.addedSubset :
                         data.added, data.deleted), blobFixture.getType(), data.idToPath, true) :
                 (storeFixture instanceof StoreFixture.MongoStoreFixture) ?
-                        encodedIdsAndPath(Sets.difference(data.added, data.deleted), blobFixture.getType(), data.idToPath, false) :
-                        Sets.difference(data.added, data.deleted));
+                        encodedIdsAndPath(SetUtils.difference(data.added, data.deleted), blobFixture.getType(), data.idToPath, false) :
+                        SetUtils.difference(data.added, data.deleted));
         
         if (!markOnly) {
             // Verbose would have paths as well as ids changed but normally only DocumentNS would have paths suffixed
             assertFileEquals(dump, "gccand-", verbose ?
-                    encodedIdsAndPath(verboseRootPath ? Sets.intersection(data.addedSubset, data.missingDataStore) :
+                    encodedIdsAndPath(verboseRootPath ? SetUtils.intersection(data.addedSubset, data.missingDataStore) :
                             data.missingDataStore, blobFixture.getType(), data.idToPath, true) :
                     (storeFixture instanceof StoreFixture.MongoStoreFixture) ?
                             encodedIdsAndPath(data.missingDataStore, blobFixture.getType(), data.idToPath, false) :
@@ -768,7 +762,7 @@ public class DataStoreCommandTest {
         List<String> argsList = new ArrayList<>(Arrays.asList("--dump-ref", "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
                         storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(), "--work-dir",
                         temporaryFolder.newFolder().getAbsolutePath()));
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.addAll(Splitter.on(" ").splitToList(additionalParams));
         }
 
@@ -780,9 +774,9 @@ public class DataStoreCommandTest {
 
         // Verbose would have paths as well as ids changed, otherwise only ids would be listed as it is.
         assertFileEquals(dump, "dump-ref-", verbose ?
-                encodedIdsAndPath(Sets.difference(verboseRootPath ? data.addedSubset :
+                encodedIdsAndPath(SetUtils.difference(verboseRootPath ? data.addedSubset :
                         data.added, data.deleted), blobFixture.getType(), data.idToPath, true) :
-                Sets.difference(data.added, data.deleted), "dump");
+                SetUtils.difference(data.added, data.deleted), "dump");
 
     }
 
@@ -790,7 +784,7 @@ public class DataStoreCommandTest {
         List<String> argsList = new ArrayList<>(Arrays.asList("--dump-id", "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
                         storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(), "--work-dir",
                         temporaryFolder.newFolder().getAbsolutePath()));
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.addAll(Splitter.on(" ").splitToList(additionalParams));
         }
 
@@ -802,8 +796,8 @@ public class DataStoreCommandTest {
 
         // Verbose would have backend friendly encoded ids
         assertFileEquals(dump, "dump-id-", verbose ?
-                encodeIds(Sets.difference(data.added, data.missingDataStore), blobFixture.getType()) :
-                        Sets.difference(data.added, data.missingDataStore), "dump");
+                encodeIds(SetUtils.difference(data.added, data.missingDataStore), blobFixture.getType()) :
+                        SetUtils.difference(data.added, data.missingDataStore), "dump");
 
     }
 
@@ -812,7 +806,7 @@ public class DataStoreCommandTest {
                 "--" + getOption(blobFixture.getType()), blobFixture.getConfigPath(),
                 storeFixture.getConnectionString(), "--out-dir", dump.getAbsolutePath(), "--work-dir",
                 temporaryFolder.newFolder().getAbsolutePath()));
-        if (!Strings.isNullOrEmpty(additionalParams)) {
+        if (!StringUtils.isEmpty(additionalParams)) {
             argsList.addAll(Splitter.on(" ").splitToList(additionalParams));
         }
 
@@ -820,21 +814,21 @@ public class DataStoreCommandTest {
         cmd.execute(argsList.toArray(new String[0]));
 
         if (!markOnly && !refsOld) {
-            assertFileEquals(dump, "avail-", Sets.difference(data.added, data.missingDataStore));
+            assertFileEquals(dump, "avail-", SetUtils.difference(data.added, data.missingDataStore));
         } else {
             assertFileNull(dump, "avail-");
         }
 
-        assertFileEquals(dump, "marked-", Sets.difference(data.added, data.deleted));
+        assertFileEquals(dump, "marked-", SetUtils.difference(data.added, data.deleted));
         if (!markOnly && !refsOld) {
             assertFileEquals(dump, "gccand-", data.deleted);
         } else {
             assertFileNull(dump, "gccand-");
         }
 
-        Sets.SetView<String> blobsBeforeGc = Sets.difference(data.added, data.missingDataStore);
+        Set<String> blobsBeforeGc = SetUtils.difference(data.added, data.missingDataStore);
         if (maxAge <= 0) {
-            assertEquals(Sets.difference(blobsBeforeGc, data.deleted), blobs(setupDataStore));
+            assertEquals(SetUtils.difference(blobsBeforeGc, data.deleted), blobs(setupDataStore));
         } else {
             assertEquals(blobsBeforeGc, blobs(setupDataStore));
         }
@@ -927,11 +921,11 @@ public class DataStoreCommandTest {
 
     private static Set<String> encodedIdsAndPath(Set<String> ids, Type dsOption, Map<String, String> idToNodes,
         boolean encodeId) {
-        return CollectionUtils.toSet(Iterators.transform(ids.iterator(), input -> Joiner.on(",").join(encodeId ? encodeId(input, dsOption) : input, idToNodes.get(input))));
+        return SetUtils.toSet(Iterators.transform(ids.iterator(), input -> String.join(",", encodeId ? encodeId(input, dsOption) : input, idToNodes.get(input))));
     }
 
     private static Set<String> encodeIds(Set<String> ids, Type dsOption) {
-        return CollectionUtils.toSet(Iterators.transform(ids.iterator(), input -> encodeId(input, dsOption)));
+        return SetUtils.toSet(Iterators.transform(ids.iterator(), input -> encodeId(input, dsOption)));
     }
 
 
@@ -1133,7 +1127,6 @@ public class DataStoreCommandTest {
         class AzureSegmentStoreFixture extends SegmentStoreFixture {
             private static final String AZURE_DIR = "repository";
             private String container;
-            private final AzureStorageCredentialManager azureStorageCredentialManager = new AzureStorageCredentialManager();
 
             @Override public NodeStore init(DataStoreBlobStore blobStore, File storeFile) throws Exception {
                 Properties props = AzureDataStoreUtils.getAzureConfig();
@@ -1143,14 +1136,14 @@ public class DataStoreCommandTest {
                 container = container + System.currentTimeMillis();
                 // Create the azure segment container
                 String connectionString = getAzureConnectionString(accessKey, secretKey, container, AZURE_DIR);
-                AzureUtilities.cloudBlobDirectoryFrom(connectionString, container, AZURE_DIR);
+                AzurePersistenceManager.createAzurePersistence(connectionString, null, accessKey, container, AZURE_DIR, false, true);
 
                 // get the azure uri expected by the command
                 storePath = getAzureUri(accessKey, container, AZURE_DIR);
 
                 // initialize azure segment for test setup
                 SegmentNodeStorePersistence segmentNodeStorePersistence =
-                    ToolUtils.newSegmentNodeStorePersistence(ToolUtils.SegmentStoreType.AZURE, storePath, azureStorageCredentialManager);
+                    ToolUtils.newSegmentNodeStorePersistence(ToolUtils.SegmentStoreType.AZURE, storePath);
                 fileStore = fileStoreBuilder(storeFile).withBlobStore(blobStore)
                     .withCustomPersistence(segmentNodeStorePersistence).build();
 
@@ -1182,7 +1175,6 @@ public class DataStoreCommandTest {
             public void after() {
                 try {
                     AzureDataStoreUtils.deleteContainer(container);
-                    azureStorageCredentialManager.close();
                 } catch(Exception e) {
                     log.error("Error in cleaning the container {}", container, e);
                 }
@@ -1342,11 +1334,11 @@ public class DataStoreCommandTest {
 
     static class FixtureHelper {
         static List<StoreFixture> getStoreFixtures() {
-            return ImmutableList.of(StoreFixture.MONGO, StoreFixture.SEGMENT, StoreFixture.SEGMENT_AZURE);
+            return List.of(StoreFixture.MONGO, StoreFixture.SEGMENT, StoreFixture.SEGMENT_AZURE);
         }
 
         static List<DataStoreFixture> getDataStoreFixtures() {
-            return ImmutableList.of(DataStoreFixture.S3, DataStoreFixture.AZURE, DataStoreFixture.FDS);
+            return List.of(DataStoreFixture.S3, DataStoreFixture.AZURE, DataStoreFixture.FDS);
         }
 
         static List<Object[]> get() {
