@@ -22,12 +22,10 @@ import java.util.List;
 import java.util.Random;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.Iterables;
-
 import org.apache.commons.codec.binary.Hex;
 import org.apache.jackrabbit.oak.api.CommitFailedException;
 import org.apache.jackrabbit.oak.commons.PathUtils;
+import org.apache.jackrabbit.oak.commons.collections.IterableUtils;
 import org.apache.jackrabbit.oak.commons.junit.LogCustomizer;
 import org.apache.jackrabbit.oak.plugins.document.ClusterNodeInfo;
 import org.apache.jackrabbit.oak.plugins.document.ClusterNodeInfoDocument;
@@ -433,7 +431,7 @@ public class UtilsTest {
             }
             store.merge(builder, EmptyHook.INSTANCE, CommitInfo.EMPTY);
 
-            assertEquals(1001 /* root + 1000 children */, Iterables.size(
+            assertEquals(1001 /* root + 1000 children */, IterableUtils.size(
                     Utils.getAllDocuments(store.getDocumentStore())));
         } finally {
             store.dispose();
@@ -443,34 +441,34 @@ public class UtilsTest {
     @Test
     public void getMaxExternalRevisionTime() {
         int localClusterId = 1;
-        List<Revision> revs = ImmutableList.of();
+        List<Revision> revs = Collections.emptyList();
         long revTime = Utils.getMaxExternalTimestamp(revs, localClusterId);
         assertEquals(Long.MIN_VALUE, revTime);
 
-        revs = ImmutableList.of(Revision.fromString("r1-0-1"));
+        revs = List.of(Revision.fromString("r1-0-1"));
         revTime = Utils.getMaxExternalTimestamp(revs, localClusterId);
         assertEquals(Long.MIN_VALUE, revTime);
 
-        revs = ImmutableList.of(
+        revs = List.of(
                 Revision.fromString("r1-0-1"),
                 Revision.fromString("r2-0-2"));
         revTime = Utils.getMaxExternalTimestamp(revs, localClusterId);
         assertEquals(2, revTime);
 
-        revs = ImmutableList.of(
+        revs = List.of(
                 Revision.fromString("r3-0-1"),
                 Revision.fromString("r2-0-2"));
         revTime = Utils.getMaxExternalTimestamp(revs, localClusterId);
         assertEquals(2, revTime);
 
-        revs = ImmutableList.of(
+        revs = List.of(
                 Revision.fromString("r1-0-1"),
                 Revision.fromString("r2-0-2"),
                 Revision.fromString("r2-0-3"));
         revTime = Utils.getMaxExternalTimestamp(revs, localClusterId);
         assertEquals(2, revTime);
 
-        revs = ImmutableList.of(
+        revs = List.of(
                 Revision.fromString("r1-0-1"),
                 Revision.fromString("r3-0-2"),
                 Revision.fromString("r2-0-3"));
